<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="booger.dontsueme.mytipcalculator.MainActivity"
    tools:showIn="@layout/activity_main">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText6"
        android:text="@string/twentyPercentTipValue"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:inputType="none"
        android:clickable="false"
        android:focusable="false"
        android:focusableInTouchMode="false" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText7"
        android:text="@string/twentyfivePercentTipValue"
        android:layout_above="@+id/editText4"
        android:layout_toEndOf="@+id/calculateButton"
        android:inputType="none"
        android:clickable="false"
        android:focusable="false"
        android:focusableInTouchMode="false" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText8"
        android:text="@string/fifteenPercentTotalValue"
        android:layout_alignBottom="@+id/editText4"
        android:layout_toEndOf="@+id/editText4"
        android:inputType="none"
        android:clickable="false"
        android:focusable="false"
        android:focusableInTouchMode="false" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText9"
        android:text="@string/twentyPercentTotalValue"
        android:layout_alignBottom="@+id/editText8"
        android:layout_centerHorizontal="true"
        android:inputType="none"
        android:clickable="false"
        android:focusable="false"
        android:focusableInTouchMode="false" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText10"
        android:text="@string/twentyfivePercentTotalValue"
        android:layout_alignBottom="@+id/editText9"
        android:layout_alignStart="@+id/editText7"
        android:inputType="none"
        android:clickable="false"
        android:focusable="false"
        android:focusableInTouchMode="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/fifteenOutTipText"
        android:layout_above="@+id/editText8"
        android:layout_alignStart="@+id/partySizeUser"
        android:layout_alignTop="@+id/editText5"
        android:layout_toStartOf="@+id/editText6"
        android:inputType="none"
        tools:textSize="12sp"
        android:textSize="14sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/twentyOutTipText"
        android:layout_alignEnd="@+id/calculateButton"
        android:layout_toEndOf="@+id/editText6"
        android:inputType="none"
        android:layout_alignTop="@+id/editText6"
        android:layout_above="@+id/editText9"
        android:textSize="14sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/twentyfiveOutTipText"
        android:layout_alignBottom="@+id/twentyOutTipText"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/editText7"
        android:inputType="none"
        android:layout_alignTop="@+id/editText7"
        android:textSize="14sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/fifteenOutTotalText"
        android:layout_alignBottom="@+id/editText8"
        android:layout_alignStart="@+id/fifteenOutTipText"
        android:layout_toStartOf="@+id/editText9"
        android:inputType="none"
        android:layout_below="@+id/editText6"
        android:textSize="14sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/twentyOutTotalText"
        android:layout_alignEnd="@+id/twentyOutTipText"
        android:layout_toEndOf="@+id/editText9"
        android:inputType="none"
        android:layout_below="@+id/editText6"
        android:layout_alignBottom="@+id/editText9"
        android:textSize="14sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/twentyfiveOutTotalText"
        android:layout_alignEnd="@+id/twentyfiveOutTipText"
        android:layout_toEndOf="@+id/editText10"
        android:inputType="none"
        android:layout_below="@+id/editText7"
        android:layout_alignBottom="@+id/editText10"
        android:textSize="14sp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonCompute"
        android:id="@+id/calculateButton"
        android:maxLines="1"
        android:layout_above="@+id/editText6"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:hapticFeedbackEnabled="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:text="@string/partySizeValue"
        android:layout_below="@+id/billAmountText"
        android:layout_alignParentStart="true"
        android:layout_marginTop="22dp"
        android:inputType="none"
        android:clickable="false"
        android:focusable="false"
        android:focusableInTouchMode="false" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/billAmountUser"
        android:layout_alignBottom="@+id/billAmountText"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/billAmountText" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText3"
        android:text="@string/tipValue"
        android:inputType="none"
        android:layout_alignBaseline="@+id/editText6"
        android:layout_alignBottom="@+id/editText6"
        android:layout_alignParentStart="true"
        android:clickable="false"
        android:focusable="false"
        android:focusableInTouchMode="false" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText4"
        android:text="@string/TotalValue"
        android:inputType="none"
        android:layout_below="@+id/editText5"
        android:clickable="false"
        android:focusable="false"
        android:focusableInTouchMode="false" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText5"
        android:text="@string/fifteenPercentTipValue"
        android:inputType="none"
        android:layout_below="@+id/calculateButton"
        android:layout_toEndOf="@+id/editText4"
        android:clickable="false"
        android:focusable="false"
        android:focusableInTouchMode="false" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/partySizeUser"
        android:layout_alignBaseline="@+id/editText"
        android:layout_alignBottom="@+id/editText"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/editText" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/billAmountText"
        android:text="@string/checkAmountValue"
        android:inputType="none"
        android:clickable="false"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:focusable="false"
        android:focusableInTouchMode="false" />

</RelativeLayout>
